--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Dictionary</string>
+
+    <string-array name="countries">
+        <item>Nepal</item>
+        <item>India</item>
+        <item>China</item>
+        <item>US</item>
+        <item>Uk</item>
+        <item>Canada</item>
+    </string-array>
 </resources>
